fix: hide overflow

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,6 +13,7 @@ a:focus {
   outline: none;
 }
 
+html,
 body {
   padding: 0;
   margin: 0;
